tests/invalid/comprehension_complex_target/main.py
pairs: list[tuple[int, int]] = [(1, 2), (3, 4)]
x: list[int] = [a for (a, b) in pairs]
